Fix cut off matBadges

--- a/projects/ng-dialogs/src/styles/ag-grid.styles.scss
+++ b/projects/ng-dialogs/src/styles/ag-grid.styles.scss
@@ -190,6 +190,7 @@ ag-grid-angular.ag-theme-material {
     justify-content: center;
     height: 100%;
     width: 40px;
+    overflow: visible; // fixes cut off matBadge
 
     &:not(.disabled) {
       cursor: pointer;
